# yolo-tonic

./: .dockerignore  .env.template  .gitignore  Makefile  README.md  base.yaml  compose.cuda.local.yaml  compose.cuda.yaml  compose.local.yaml  compose.trt.local.yaml  compose.trt.yaml  compose.yaml  index.html
.github/workflows/: audit.yaml  build.yaml
client/: Makefile  main.py  pyproject.toml  stream.py  yolo_service_pb2.py  yolo_service_pb2_grpc.py
docs/lessons_learned/: 2025-02-15.md
docs/setup/: nvidia_docker.md
grafana/monitoring_dashboards/: yolo_monitoring.json  yolo_prediction_duration.json
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/datasources/: prometheus.yaml
monitoring/grafana/monitoring_dashboards/: yolo_prediction_duration.json
monitoring/telemetry/otel/: otel-collector-config.yml
prometheus/: prometheus.yml
scripts/: model_download.sh
scripts/grpc_ui/: README.md  run_grpc_ui.sh
scripts/model_download/: main.py  pyproject.toml  requirements.txt  run.sh
scripts/predict_image/: predict_image.sh
server/: Cargo.toml
server/proto/: yolo_service.proto
server/src/: app.rs  lib.rs  main.rs  model_service.rs  yolo_service.rs
webcam_capture/: Cargo.toml  Dockerfile  Makefile  index.html  main.py  pyproject.toml  requirements.txt  yolo_service_pb2.py  yolo_service_pb2_grpc.py
webcam_capture/configuration/: base.yaml  local.yaml  production.yaml
webcam_capture/src/: app.rs  bounding_box.rs  camera.py  camera.rs  config.py  config.rs  custom_logging.py  cv_utils.rs  lib.rs  logging_config.json  main.py  main.rs  prediction.py  prediction.rs  server.rs  stream.rs  telemetry.rs  web.rs  yolo_service_pb2_grpc.py
webcam_capture/src/routes/: health.rs  metrics.rs  mod.rs  predict_image.rs  video_feed.rs
yolo_prediction/: Cargo.toml  Dockerfile  cuda.Dockerfile  healthcheck.sh  trt.Dockerfile
yolo_prediction/configuration/: base.yaml  local.yaml  production.yaml
yolo_prediction/labels/: yolov8_labels.txt
yolo_prediction/src/: app.rs  config.rs  inference_service.rs  lib.rs  main.rs  model_service.rs  ort_service.rs  server.rs  service.rs  state.rs
yolo_prediction_service/: Cargo.toml  Dockerfile  build.rs
yolo_prediction_service/src/: app.rs  inference_service.rs  lib.rs  main.rs  model_service.rs  ort_service.rs  proto.rs
yolo_proto/: Cargo.toml  build.rs  yolo_service.proto
yolo_proto/proto/: yolo_service.proto
yolo_proto/src/: lib.rs
