[package]
name = "yolo-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "yolo-service"

[dependencies]
tonic = "0.12.3"
tokio = { version = "1", features = ["full"] }
ort = "2.0.0-rc.9"
prost = "0.13.3"
futures = "0.3.31"
async-stream = "0.3"
image = "0.25"

[build-dependencies]
tonic-build = "0.12.3"
