[package]
name = "webcam_capture"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "webcam_capture"

[dependencies]
yolo_proto = { path = "../yolo_proto" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
opencv = "0.94"
futures = "0.3"
anyhow = "1"
bytes = "1"
tonic = "0.12"
config = { version = "0.15", default-features = false, features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
