[package]
name = "webcam_capture"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "webcam_capture"

[profile.performance]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
yolo_proto = { path = "../yolo_proto" }
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rand = "0.9"
axum = { version = "0.8", features = ["ws", "tokio"] }
opencv = "0.94"
futures = "0.3"
anyhow = "1"
tonic = "0.13"
config = { version = "0.15", default-features = false, features = ["yaml"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
thiserror = "2"
axum-otel-metrics = { version = "0.10" }
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics"] }
