[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "grpcio-tools>=1.70.0",
    "grpcio>=1.70.0",
    "opencv-python>=4.11.0.86",
    "loguru>=0.7.3",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
