[package]
name = "yolo_prediction"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "yolo_prediction"

[dependencies]
yolo_proto = { path = "../yolo_proto" }
ort = { version = "2.0.0-rc.9", features = ["ndarray", "cuda"] }
tonic = "0.12"
tonic-reflection = "0.12"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
image = "0.25"
ndarray = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
