[package]
name = "yolo_prediction"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "yolo_prediction"

[profile.performance]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"

[workspace.metadata.clippy]
warn = ["all", "pedantic"]

[dependencies]
yolo_proto = { path = "../yolo_proto" }
ort = { version = "2.0.0-rc.10", features = ["ndarray", "tensorrt"] }
tonic = "0.13"
tonic-reflection = "0.13"
tonic-health = "0.13"
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
image = "0.25.9"
ndarray = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
