[project]
name = "model-download"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "ultralytics>=8.3.0",
  "onnx>=1.17.0",
  "onnxslim>=0.1.49",
  "onnxruntime>=1.21.0"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
